# abov3-v1.0.0

./: .gitignore  CHANGELOG.md  CLI_SUMMARY.md  CONTRIBUTING.md  ENTRY_POINTS_SUMMARY.md  FINAL_SETUP.md  INSTALLATION_ENTRY_POINTS.md  INSTALLATION_GUIDE.md  OLLAMA_TEST_RESULTS.md  PROJECT_MANAGEMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REPL_FIXES_SUMMARY.md  abov3.bat  abov3.py  abov3.sh  abov3_direct.bat  abov3_project.py  add_to_path.ps1  debug_api.py  debug_config.py  debug_ollama_lib.py  demo.py  find_config.py  fix_config.py  fix_path.ps1  install.py  install_abov3.bat  install_abov3.py  install_abov3.sh  install_global.bat  install_global.ps1  make_global.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_bash_alias.sh  start.py  (+10 more)
abov3/: __init__.py  __main__.py  cli.py
abov3/core/: __init__.py  app.py  config.py  project_app.py  project_integration.py
abov3/core/api/: __init__.py  exceptions.py  ollama_client.py
abov3/core/context/: __init__.py  manager.py  memory.py  session.py
abov3/core/project/: __init__.py  manager.py
abov3/models/: __init__.py  evaluation.py  fine_tuning.py  info.py  manager.py  registry.py  training.py
abov3/plugins/: __init__.py
abov3/plugins/base/: __init__.py  manager.py  plugin.py  registry.py
abov3/plugins/builtin/: __init__.py
abov3/tests/: test_ollama_client.py
abov3/ui/console/: __init__.py  completers.py  formatters.py  keybindings.py  repl.py
abov3/utils/: __init__.py  code_analysis.py  errors.py  export.py  file_ops.py  git_integration.py  logging.py  monitoring.py  project_errors.py  project_file_ops.py  sanitize.py  security.py  setup.py  updater.py  validation.py
docs/: COMMAND_REFERENCE.md  ENTERPRISE_DEPLOYMENT.md  FAQ.md  SECURITY_SETUP.md  TROUBLESHOOTING.md  USER_MANUAL.md  api_reference.md  developer_guide.md  fine_tuning_guide.md  installation.md  logging_error_monitoring_framework.md  ollama_client_usage.md  quick_start.md  user_guide.md
examples/: advanced_features.py  basic_usage.py  fine_tuning_example.py  logging_error_monitoring_example.py  model_management_example.py  ollama_client_example.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_context.py  test_integration.py  test_models.py  test_security.py
